manifests/emqx-iot/simulator/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-api
  namespace: iot-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-api
  template:
    metadata:
      labels:
        app: iot-api
    spec:
      containers:
        - name: api
          image: ghcr.io/zazanicholas01/greenhouse-iot-api:run-13 # {"$imagepolicy": "flux-system:greenhouse-iot-api"}
          imagePullPolicy: Always
          command: ["bun", "run", "index.js"]
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: db-init-sql
              mountPath: /app/db-init
      volumes:
        - name: db-init-sql
          configMap:
            name: iot-timescaledb-init
---
apiVersion: v1
kind: Service
metadata:
  name: iot-api
  namespace: iot-playground
spec:
  selector:
    app: iot-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
