manifests/emqx-iot/simulator/dbgate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbgate
  namespace: iot-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbgate
  template:
    metadata:
      labels:
        app: dbgate
    spec:
      containers:
        - name: dbgate
          image: dbgate/dbgate:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: dbgate-data
              mountPath: /root/.dbgate
          
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          
      volumes:
        - name: dbgate-data
          persistentVolumeClaim:
            claimName: dbgate-data
---
apiVersion: v1
kind: Service
metadata:
  name: dbgate
  namespace: iot-playground
spec:
  selector:
    app: dbgate
  ports:
    - name: http
      port: 3000
      targetPort: 3000
