manifests/emqx-iot/simulator/ui-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-ui
  namespace: iot-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-ui
  template:
    metadata:
      labels:
        app: iot-ui
    spec:
      containers:
        - name: ui
          image: ghcr.io/zazanicholas01/greenhouse-iot-ui:run-17 # {"$imagepolicy": "flux-system:greenhouse-iot-ui"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: iot-ui
  namespace: iot-playground
spec:
  selector:
    app: iot-ui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
