manifests/emqx-iot/simulator/simulator-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iot-playground
  namespace: iot-playground
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
      sectionName: iot-http
  hostnames:
    - iot.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: iot-api
          port: 8080

    - matches:
        - path:
            type: PathPrefix
            value: /simulator
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: iot-simulator
          port: 8080

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: iot-ui
          port: 8080
